# pricestr

./: CNAME  Cargo.toml  Dioxus.toml  LICENSE  README.md  feeds_api.js  feeds_rss.js  index.html  style.css
.devcontainer/: devcontainer.json  setup.sh
src/: main.rs
