[package]
name = "pricestr"
version = "0.0.1"
authors = ["avg"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3"
dioxus-web = "0.3"

log = "0.4.6"

# WebAssembly Debug
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"

# Nostr Stuff
nostr-sdk = { version = "0.18", features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }